[gd_scene load_steps=2 format=3 uid="uid://d05j6w6asvv8n"]

[ext_resource type="Script" path="res://controllers/rover/rover-ui.gd" id="1_nqqus"]

[node name="RoverUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nqqus")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -150.0
grow_horizontal = 0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Rover Controls"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="SpeedLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Speed: 0 m/s"

[node name="MotorLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Motor: 0%"

[node name="SteeringLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Steering: 0Â°" 